# gnome-text-viewer

./: com.example.TextViewer.json  meson.build
data/: com.example.TextViewer.gschema.xml
po/: POTFILES.in
src/: main.py  meson.build  text-viewer.in  window.py  window.ui
